@@ -1,4 +1,6 @@
 ver 0.24 (not yet released)
+* protocol
+  - "playlistfind"/"playlistsearch" have a "window" parameter
 * player
   - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
 * tags
